--- a/Jenkins/Dockerfile
+++ b/Jenkins/Dockerfile
@@ -1,9 +1,1 @@
-FROM python:3.7-rc
-
-ADD greetings_app/* /greetings_app/
-RUN pip install -r /greetings_app/requirements.txt
-
-ENV DB_URL=sqlite:///foo.db
-
-CMD ["python", "greetings_app/app.py"]
-
+FROM jenkins:2.60.3
